# WIFI-LOGIN

./: app.py  config.py  convert_to_pdf.py  credentials.json  error_handler.py  generate_documentation_pdf.py  google_sheets.py  main.py  mikrotik.py  mikrotik_setup_guide.md  models.py  project_documentation.md  pyproject.toml
documentation_assets/: screenshots.md
migrations/: update_user_table.sql
static/css/: custom.css
static/js/: admin.js  login.js
templates/: admin.html  admin_blocked.html  admin_login.html  admin_manage_users.html  admin_sessions.html  admin_users.html  base.html  error.html  error_critical.html  login.html
